<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFC125" >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFC125" >
    
    <com.google.ads.AdView 
    	android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        ads:adUnitId="a151a5ce8f21ff2"
        ads:adSize="SMART_BANNER"
        ads:loadAdOnCreate="true" />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#009933"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/title"
        android:layout_below="@+id/adView" />
    
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/basket_large"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/title" />
    
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/source"
        android:layout_below="@+id/image" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_products"
        android:layout_below="@+id/text"
        android:background="@drawable/btn_green" 
        style="@style/ButtonText" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_products"
        android:layout_below="@+id/button1"
        android:background="@drawable/btn_green" 
        style="@style/ButtonText" />
    
    <Button
        android:id="@+id/exitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_below="@+id/button2"
        android:background="@drawable/btn_green" 
        style="@style/ButtonText" />

</RelativeLayout>
</ScrollView>